--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.13.0' # Use your Flutter version
+          flutter-version: '3.30.0-1.0.pre.292' # Use your Flutter version
       - run: flutter pub get
       - run: flutter analyze
       - run: flutter test
