--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -18,4 +18,13 @@ jobs:
       - run: flutter pub get
       #- run: flutter analyze
       #- run: flutter test
-      - run: flutter build apk --release # or build ios if needed
+      #- run: flutter build apk --release # or build ios if needed
+      # Use the setup-shorebird action to configure Shorebird
+      - name: 🐦 Setup Shorebird
+        uses: shorebirdtech/setup-shorebird@v1
+        with:
+          cache: true
+      # Optionally cache your Shorebird installation
+      # Now we're able to use Shorebird CLI in our workflow
+      - name: 🚀 Use Shorebird
+        run: shorebird --version
